--- a/elements.html
+++ b/elements.html
@@ -25,9 +25,11 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="generic.html">Twelve Letter Athlete</a></li>
+							<li><a href="index2.html">Jazz Band</a></li>
 							<li class="active"><a href="elements.html">Elements Reference</a></li>
+							
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
